log
Sat, May 17, 2025  9:28:39 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025 11:20:53 PM: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
a6fb456
Sat, May 17, 2025 11:21:13 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
010bf18
Sat, May 17, 2025 11:32:28 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0;
         ^
cc1.exe: all warnings being treated as errors
f48f2c6
Sat, May 17, 2025 11:32:42 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0;
         ^
cc1.exe: all warnings being treated as errors
0ba4091
Sat, May 17, 2025 11:32:59 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0;
         ^
cc1.exe: all warnings being treated as errors
673dfa0
Sat, May 17, 2025 11:33:05 PM: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
d8b3469
Sat, May 17, 2025 11:34:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d5406e4
Sat, May 17, 2025 11:47:04 PM: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
790a758
Sat, May 17, 2025 11:47:20 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:9: error: unused variable 'k' [-Werror=unused-variable]
     int k;
         ^
cc1.exe: all warnings being treated as errors
838f9e4
Sat, May 17, 2025 11:47:28 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
5a62283
Sat, May 17, 2025 11:48:01 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b7b0f36
Sat, May 17, 2025 11:51:28 PM: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
7487792
Sat, May 17, 2025 11:54:29 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|1
total_score: 55/70
9eb7244
Sun, May 18, 2025 12:05:27 AM: 
 sudoku.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
4e711ad
